# gilbertosbot

./: .env  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt  sentence_tokenizer.pickle
handlers/balance/: __init__.py
handlers/debts/: __init__.py  addDebtByText.py  deleteDebt.py  listDebts.py
handlers/income/: __init__.py
modules/chatBotInput/: __init__.py  trainer.py
modules/financeApiConnection/: __init__.py
modules/userActions/: __init__.py
modules/verifyUserAlreadyAdd/: __init__.py
