[tool.poetry]
name = "finnchatbot"
version = "0.1.0"
description = "Chat bot project that will help the users to build a healf finnance life."
authors = ["willianOliveiraMX <willianvoliveiravx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
