[tool.poetry]
name = "finnchatbot"
version = "0.1.0"
description = "Chat bot project that will help the users to build a healf finnance life."
authors = ["willianOliveiraMX <willianvoliveiravx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
python-telegram = "^0.15.0"
telegram = "^0.0.1"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "python3 main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
